--- a/static_files/posts/testing-custom-chakra-code-rendering.mdx
+++ b/static_files/posts/testing-custom-chakra-code-rendering.mdx
@@ -4,7 +4,7 @@ date: November 19, 2021
 sort-date: '2021-11-19'
 ---
 
-# I'm here to test code rendering
+I'm here to test code rendering
 
 ```javascript
 class Something {
