changing some formatting

--- a/static_files/posts/internal-mdx-blog.mdx
+++ b/static_files/posts/internal-mdx-blog.mdx
@@ -10,7 +10,7 @@ Here is an example of a code block.
 
 ```javascript
 const doStuff = () => {
-  console.log('doing stuff')
+  console.log('This is doing something')
 }
 ```
 
