--- a/static_files/posts/internal-mdx-blog.mdx
+++ b/static_files/posts/internal-mdx-blog.mdx
@@ -2,6 +2,7 @@
 title: Creating an internal blog with MDX
 date: 'November 14, 2021'
 sort-date: '2021-11-14'
+tags: ['javascript', 'markdown', 'nextjs']
 ---
 
 I added a blog feature to my personal site where I render MDX files.
