--- a/static_files/posts/prefer-creating-new-components-to-render-subfunctions.mdx
+++ b/static_files/posts/prefer-creating-new-components-to-render-subfunctions.mdx
@@ -2,6 +2,7 @@
 title: Create new components. Don't render them in sub-functions
 date: November 20, 2021
 sort-date: '2021-11-20'
+tags: ['react', 'javascript', 'design-patterns']
 ---
 
 ## So what am I even talking about in my title?
