updating with new date

--- a/static_files/posts/internal-mdx-blog.mdx
+++ b/static_files/posts/internal-mdx-blog.mdx
@@ -1,6 +1,6 @@
 ---
 title: Creating an internal blog with MDX
-date: 'November 14, 2021'
+date: '11-14-2021'
 sort-date: '2021-11-14'
 tags: ['javascript', 'markdown', 'nextjs']
 ---
