--- a/static_files/posts/prefer-creating-new-components-to-render-subfunctions.mdx
+++ b/static_files/posts/prefer-creating-new-components-to-render-subfunctions.mdx
@@ -1,6 +1,6 @@
 ---
 title: Create new components. Don't render them in sub-functions
-date: November 20, 2021
+date: '11-20-2021'
 sort-date: '2021-11-20'
 tags: ['react', 'javascript', 'design-patterns']
 ---
