--- a/static_files/posts/simple-async-loading-with-useeffect.mdx
+++ b/static_files/posts/simple-async-loading-with-useeffect.mdx
@@ -1,6 +1,6 @@
 ---
 title: Simple Async Loading with useEffect
-date: November 26, 2021
+date: '11-26-2021'
 sort-date: '2021-11-26'
 tags: ['react', 'javascript']
 ---
