Adding explanation for day 8

--- a/static_files/posts/advent-of-code-day8.mdx
+++ b/static_files/posts/advent-of-code-day8.mdx
@@ -151,3 +151,5 @@ for (const { patterns, codes } of signals) {
 
 console.log(result)
 ```
+
+When I figure out a more eloquent way to explain this solution I'll update this.
